[package]
name = "async-itertools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.28"
bytes = "1.4.0"
async-trait = "0.1.68"

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
serde = "1"